# PSC

./: README.md
JUPYTER_NOTEBOOK/: TEST_EQUATION_OF_MOTION.ipynb
OPEN_FOAM_SOLUTION/: cuboid_force_dict
PRE_FEM/: Bessel_function_calculation  Bessel_function_calculation.c  CFD.txt  aerodynamic.tex  check_transform.tex  cone_stress.tex  discretization.md  discretization.tex  discretizationmatrix.fdb_latexmk  discretizationmatrix.fls  discretizationmatrix.md  fem.tex  matrix_fill_in.ods  node_numbering.tex  random_walk_laplace  random_walk_laplace.py  rendu.aux  rendu.tex  study_the_detachment_of_glace_in_the_cone_of_the_inlet_of_a_turbofan_engine.tex  tempCodeRunnerFile.cpp
PRE_FEM/CODE/: CMakeLists.txt  LAPLACE.f90  TEST_FEM_EXCEL.ods  a.out  grid  grid.cpp  grid_draw.ipynb  local_stiffness_matrix_output.txt  rect_stiff_loc.mod  structured_grid_coordinates_cpp.txt  structured_grid_coordinates_py.txt  test_eigen.cpp  test_fem_cpp  test_fem_cpp.cpp  transformation.py  transformation_2.py
PRE_FEM/CODE/.ipynb_checkpoints/: grid_draw-checkpoint.ipynb  test_fem_cpp-checkpoint.cpp  transformation_check-checkpoint.md
PRE_FEM/CODE/COMPUTATIONAL_SCIENCE/: matrix.f18
PRE_FEM/CODE/fortran/: four_node_stiff_loc.f90  four_node_stiff_loc.mod  global_stiff.mod  quad_stiff_loc.mod  rect_stiff_loc.mod  tri_stiff_loc.f90  tri_stiff_loc.mod
PRE_FEM/CODE/src/: matrix  matrix.h  possion_solver.h
SELF_CODE/: README.md  TWO_SURFACE_HERMITE_INTERPOLATION.txt  a.txt  exit  tensor.txt
SOME_SOLVER/: axisymmetric_fem.hpp  csr_sparse_solver.hpp  dense_system_solver.hpp  geometry.hpp  (+1 more)
(+295 files in other folders)
